# pyproject.toml file for nocasedict
# Documentation:
# pyproject.toml: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# setuptools items: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = [
    # Keep in sync with base-requirements.txt and the base dependencies in
    # minimum-constraints-install.txt
    "setuptools>=70.0.0",
    "setuptools-scm[toml]>=8.1.0",
    "wheel>=0.41.3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]
script-files = []
zip-safe = true

[tool.setuptools.packages.find]
# setuptools needs all sub-packages to be specified as well to avoid the
# ambiguity warning. That can be done by specifyng 'packages' with a full list
# of packages including sub-packages, or by specifying 'packages.find' with
# wildcards. The strings in 'packages.find' are matched using glob pattern
# matching against the package path.
include = ["nocasedict"]

[project]
name = "nocasedict"
description = "A case-insensitive list for Python"
authors = [
    {name = "Andreas Maier", email = "maiera@de.ibm.com"}
]
maintainers = [
    {name = "Andreas Maier", email = "maiera@de.ibm.com"},
]
readme = "README.md"
license = {text = "GNU Lesser General Public License v2 or later (LGPLv2+)"}
keywords = ["list", "case-insensitive"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/pywbem/nocasedict"
"Bug Tracker" = "https://github.com/pywbem/nocasedict/issues"
Documentation = "https://nocasedict.readthedocs.io/en/master/"
"Source Code" = "https://github.com/pywbem/nocasedict"
Changelog = "https://nocasedict.readthedocs.io/en/master/changes.html"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# Get the version from the Git tag, and write a version file:
version_file = "nocasedict/_version_scm.py"
